--- a/test.css
+++ b/test.css
@@ -17,6 +17,14 @@ h1 {
 }
 
 p {
+    text-align: left;
+    font-style: normal;
+    font-family: Arial;
+    color: rgb(255, 255, 255);
+    margin: 25px 100px 75px 150px;
+}
+
+li {
     text-align: center;
     font-style: normal;
     font-family: Arial;
